fixed web interface

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -10,7 +10,7 @@
 </tr>
 <tr>
   <td>Build Command</td>
-  <td><input name="build_command" type="text" value="<%= project_config["build_command"] %>"/></td>
+  <td><input name="build_command_line" type="text" value="<%= project_config["build_command_line"] %>"/></td>
 </tr>
 <tr>
   <td>SCM Spec</td>
