project dashboard now also on the public web

--- a/trunk/server/damagecontrol/web/dashboard.erb
+++ b/trunk/server/damagecontrol/web/dashboard.erb
@@ -48,10 +48,12 @@
 		<% end %>
 	</table>
 	
+	<% if private? then %>
 	Tasks:
 	<ul>
 	<li><a href="project?action=configure">New Project</a></li>
 	</ul>
+	<% end %>
 
 </body>
 </html>
