--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -122,6 +122,7 @@ function enableOrDisableCvsFieldsAndUpdateScmSpec() {
 </table>
 
 <div id="cvs" style="display:none">
+<img src="http://www.wincvs.org/cvs.png"/>
 	<table>
 		<tr>
 			<td>CVSROOT</td>
@@ -161,7 +162,13 @@ function enableOrDisableCvsFieldsAndUpdateScmSpec() {
 </div>
 
 <div id="svn" style="display:none">
-Subversion settings (doesn't work yet)
+<img src="http://subversion.tigris.org/subversion_logo-200x173.png" height="62" width="54"/> (doesn't work yet)
+	<table>
+		<tr>
+			<td>URL</td>
+			<td><input id="svnurl" type="text" value="<%= project_config['svnurl'] %>"></td>
+		</tr>
+	</table>
 </div>
 
   <input name="scm_spec" type="hidden" id="scm_spec"/>
