--- a/trunk/server/damagecontrol/web/dashboard.erb
+++ b/trunk/server/damagecontrol/web/dashboard.erb
@@ -33,27 +33,19 @@
 		<% if false then %>
 		<tr class="dashboard">
 			<td class="dashboard">
-			<img src="images/red-pulse-32.gif" /> <a href="project">project1</a>
+			<img src="images/red-pulse-32.gif" />&nbsp;<a href="project">project1</a>
 			</td>
 			<td class="dashboard">
-			<img src="images/red-32.gif" /> <a href="project">project1</a>
+			<img src="images/red-32.gif" />&nbsp;<a href="project">project1</a>
 			</td>
 			<td class="dashboard">
-			<img src="images/green-pulse-32.gif" /> <a href="project">project1</a>
+			<img src="images/green-pulse-32.gif" />&nbsp;<a href="project">project1</a>
 			</td>
 			<td class="dashboard">
-			<img src="images/green-32.gif" /> <a href="project">project1</a>
+			<img src="images/green-32.gif" />&nbsp;<a href="project">project1</a>
 			</td>
 		</tr>
 		<% end %>
 	</table>
-	
-	<% if private? then %>
-	Tasks:
-	<ul>
-	<li><a href="project?action=configure">New Project</a></li>
-	</ul>
-	<% end %>
-
 </body>
 </html>
