--- a/trunk/server/damagecontrol/web/dashboard.erb
+++ b/trunk/server/damagecontrol/web/dashboard.erb
@@ -11,25 +11,37 @@
 		
 	%>
 	<table class="dashboard">
-		<tr class="dashboard">
-			<%
-			
-			projects.each do |project|
-			
-				href = "project?project_name=#{project}"
-				color = if build_history_repository.last_completed_build(project).successful? then "green" else "red" end
-				pulse = if build_history_repository.current_build(project).completed? then "" else "-pulse" end
-				image = "images/#{color}#{pulse}-32.gif"
-			%>
-			
-				<td class="dashboard">
-				<img src="<%= image %>" /> <a href="<%= href %>"><%= project %></a>
-				</td>
-			
-			<%
-			end
-			%>
-		</tr>
+		<%
+
+		i = -1
+		project_count = projects.length
+		projects.each do |project|
+
+			i += 1
+			cells_per_row = 4
+			start_row = i % cells_per_row == 0
+			end_row = i == project_count || i % cells_per_row == (cells_per_row - 1)
+			href = "project?project_name=#{project}"
+			color = if build_history_repository.last_completed_build(project).successful? then "green" else "red" end
+			pulse = if build_history_repository.current_build(project).completed? then "" else "-pulse" end
+			image = "images/#{color}#{pulse}-32.gif"
+		%>
+
+			<% if start_row then %>
+			<tr class="dashboard">
+			<% end %>
+
+			<td class="dashboard">
+			<img src="<%= image %>" /> <a href="<%= href %>"><%= project %></a>
+			</td>
+
+			<% if end_row then %>
+			</tr>
+			<% end %>
+
+		<%
+		end
+		%>
 		<% if false then %>
 		<tr class="dashboard">
 			<td class="dashboard">
