larger distance between cells

--- a/trunk/server/damagecontrol/web/dashboard.erb
+++ b/trunk/server/damagecontrol/web/dashboard.erb
@@ -32,7 +32,7 @@
 			<% end %>
 
 			<td class="dashboard">
-			<img src="<%= image %>" /> <a href="<%= href %>"><%= project %></a>
+			<img src="<%= image %>" /> <a href="<%= href %>"><%= project %></a> &nbsp; &nbsp; &nbsp;
 			</td>
 
 			<% if end_row then %>
