fixed bad label

--- a/trunk/server/damagecontrol/web/project_dashboard.erb
+++ b/trunk/server/damagecontrol/web/project_dashboard.erb
@@ -10,7 +10,7 @@
   </tr>
   <tr class="dashboard">
     <td class="dashboard">Current build</td>
-    <td class="dashboard"><img src="<%= self.get_status_image(:current_build, project_name) %>"/> <%= last_status %></td>
+    <td class="dashboard"><img src="<%= self.get_status_image(:current_build, project_name) %>"/> <%= current_status %></td>
   </tr>
 </table>
 
