--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -219,19 +219,18 @@ function enableOrDisableCvsFieldsAndUpdateScmSpec() {
 <tr>
   <td>Build trigger mechanism</td>
   <td>
-		<select id="trigger">
+		<select name="trigger" id="trigger">
 			<option value="none">None</option>
 			<option value="xmlrpc" selected>XMLRPC trigger</option>
-			<option value="socket">Socket trigger</option>
-			<option value="email">Email trigger</option>
-			<option value="polling">Polling</option>
+			<!--option value="email">Email trigger</option>
+			<option value="polling">Polling</option-->
 		</select>
   </td>
 </tr>
-<tr>
+<!--tr>
   <td>Unix groups</td>
   <td><input name="unix_groups" id="unix_groups" type="text" value="<%= project_config['unix_groups'] %>"/></td>
-</tr>
+</tr-->
 <tr>
   <td>Source control</td>
   <td>
